[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tellang"
version = "0.0.1"
authors = [
  { name="Arthur Maul II", email="arthurmiiengineering@gmail.com" },
]
description = "The Tiny Example Language"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/arthurmaul/tel"
Issues = "https://github.com/arthurmaul/tel/issues"
